--- a/index.html
+++ b/index.html
@@ -147,6 +147,49 @@
       background:transparent;
     }
 
+    /* Новый блок клиенты и услуги */
+    .clients-services {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: var(--card);
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      color: rgba(255,255,255,0.9);
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    .clients-services h2 {
+      color: var(--accent);
+      margin-bottom: 18px;
+      text-align: center;
+      font-weight: 700;
+    }
+    .clients-services ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 16px 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px 16px;
+      font-weight: 600;
+      color: var(--white);
+    }
+    .clients-services ul li {
+      background: rgba(255,255,255,0.1);
+      padding: 6px 12px;
+      border-radius: 8px;
+      white-space: nowrap;
+    }
+    .clients-services p {
+      max-width: 700px;
+      margin: 0 auto;
+      text-align: center;
+      color: rgba(255,255,255,0.85);
+      font-weight: 500;
+    }
+
     /* Уже есть, улучшим и добавим */
 
     @media (max-width: 1024px) {
@@ -214,6 +257,16 @@
         font-size: 14px;
         text-align: center;
       }
+      .clients-services ul {
+        justify-content: center;
+        gap: 8px 12px;
+        font-size: 13px;
+      }
+      .clients-services p {
+        font-size: 14px;
+        max-width: 100%;
+        padding: 0 10px;
+      }
     }
 
     /* Очень маленькие экраны */
@@ -277,15 +330,24 @@
           <p>От идеи и демо до релиза — аранжировка, звук и сопровождение.</p>
         </div>
       </div>
+    </section>
 
-      <div style="margin-top:28px;">
-        <h3 style="color:var(--accent);">Локации студий</h3>
-        <div class="locations">
-          <div class="loc"><strong>Москва</strong><br>Центральная студия — полнофункциональный контроль-рум и вокальная кабина.</div>
-          <div class="loc"><strong>Бали</strong><br>Резиденция для творческих сессий и атмосферных записей на природе.</div>
-          <div class="loc"><strong>Волгоград</strong><br>Локальная студия для быстрой записи и работы с исполнителями региона.</div>
-        </div>
-      </div>
+    <section class="clients-services">
+      <h2>Наши клиенты и услуги</h2>
+      <ul>
+        <li>Tkimali</li>
+        <li>Mekhman</li>
+        <li>Ганвест</li>
+        <li>Flexx</li>
+        <li>Каграманов</li>
+        <li>kommo</li>
+        <li>Ирина Тонева</li>
+        <li>Ирина Ортман</li>
+        <li>Юлия Самойлова (Eurovision 2019)</li>
+        <li>и другие</li>
+      </ul>
+      <p>Мы всегда рады новым клиентам и тем, кто серьёзно относится к своей музыкальной карьере.<br>
+      Также занимаемся продюсерской деятельностью, дистрибуцией и продвижением артистов и песен на музыкальных площадках.</p>
     </section>
 
     <section id="tracks" style="margin-top:48px;">
